--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 				<li><a href="#about">About</a></li>
 			</ul>
 		</nav>
+		<footer>
+			<hr />
+			Powered by GitHub
+		</footer>
 	</header>
 	<content>
 		<section id="home">
@@ -79,10 +83,6 @@
 			</p>
 		</section>
 	</content>
-	<footer>
-		<hr />
-		Powered by GitHub / Designed by Vrisel
-	</footer>
 	<script type="text/javascript" src="script/jquery-3.5.1.min.js" />
 </body>
 </html>
