--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 			Powered by GitHub
 		</footer>
 	</header>
-	<content>
-		<section id="home">
+	<section>
+		<article id="home">
 			<h2>Hello World!</h2>
 			<p>
 				백&프론트 풀스택 프로그래머를 꿈꾸는 Vrisel의 페이지입니다. <br />
 				... 아직 페이지 작성 중입니다. 헤헤.
 			</p>
-		</section>
-		<section id="about">
+		</article>
+		<article id="about">
 			<h2>About</h2>
 			<p>
 				<ul>
@@ -81,8 +81,8 @@
 					</li>
 				</ul>
 			</p>
-		</section>
-	</content>
+		</article>
+	</section>
 	<!--<script type="text/javascript" src="script/jquery-3.5.1.min.js" />-->
 	<script>
 		var today = new Date();
