--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	<script>
 		var today = new Date();
 		var startDay = new Date("2020. 8. 14");
-		var duration = Math.ceil((today-startDay)/1000/60/60/24)
+		var duration = Math.ceil((today.getTime()-startDay.getTime())/1000/60/60/24)
 		document.getElementById("duolingo").innerHTML = duration;
 	</script>
 </body>
