--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<!--<script type="text/javascript" src="script/jquery-3.5.1.min.js" />-->
 	<script>
 		var today = new Date();
-		var startDay = new Date("2020. 8. 14");
+		var startDay = new Date(2020, 8-1, 14);
 		var duration = Math.ceil((today.getTime()-startDay.getTime())/1000/60/60/24)
 		document.getElementById("duolingo").innerHTML = duration;
 	</script>
