--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			<ul>
 				<li><a href="#home">Home</a></li>
 				<li><a href="#about">About</a></li>
+				<li><a href="#technique">Technique</a></li>
+				<li><a href="#tmi">TMI</a></li>
 			</ul>
 		</nav>
 		<footer>
@@ -35,19 +37,38 @@
 		<article id="about">
 			<h2>About</h2>
 			<p>
+				더 나은 세상을 꿈꿉니다.
+			</p>
+		</article>
+		<article id="technique">
+			<h2>Technique</h2>
+			<p>
+				<ul>
+					<li>
+						<strong>HTML, CSS</strong> 문법을 이해합니다.
+					</li>
+					<li>
+						<strong>Python, C#, SQL, JavaScript, Java</strong> 등을 배우고 있습니다.
+					</li>
+					<li>
+						<strong><abbr title="Model, View, Controller">MVC</abbr></strong> 구조를 배우고 있습니다.
+					</li>
+				</ul>
+			</p>
+		</article>
+		<article id="tmi">
+			<h2><abbr title="Too Much Information">TMI</abbr></h2>
+			<p>
 				<ul>
 					<li>
 						<strong>Vrisel</strong>은 silver의 애너그램입니다. <br />
 						이름 지을 당시에 사용하던 노트북이 은색이라서...
 					</li>
 					<li>
-						<strong>C#, SQL Server, JavaScript, Java, Python</strong> 등을 배우고 있습니다.
-					</li>
-					<li>
-						그 외에도 잡다하게 다뤄본 것들..
+						잡다하게 다뤄본 언어들:
 						<ul>
 							<li>
-								mIRC에서 <abbr title="mIRC scripting language"><strong>mSL</strong></abbr>
+								mIRC에서 <abbr title="mIRC Scripting Language"><strong>mSL</strong></abbr>
 							</li>
 							<li>
 								Microsoft PowerPoint에서 <abbr title="Visual Basic for Applications"><strong>VBA</strong></abbr>
