--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li><a href="#home">Home</a></li>
 				<li><a href="#about">About</a></li>
-				<li><a href="#technique">Technique</a></li>
+				<li><a href="#skills">Skills</a></li>
 				<li><a href="#tmi">TMI</a></li>
 			</ul>
 		</nav>
@@ -28,7 +28,7 @@
 	</header>
 	<section>
 		<article id="home">
-			<h2>Hello World!</h2>
+			<h2>Hello, World!</h2>
 			<p>
 				백&프론트 풀스택 프로그래머를 꿈꾸는 Vrisel의 페이지입니다. <br />
 				... 아직 페이지 작성 중입니다. 헤헤.
@@ -40,8 +40,8 @@
 				더 나은 세상을 꿈꿉니다.
 			</p>
 		</article>
-		<article id="technique">
-			<h2>Technique</h2>
+		<article id="skills">
+			<h2>Skills</h2>
 			<p>
 				<ul>
 					<li>
@@ -58,50 +58,55 @@
 		</article>
 		<article id="tmi">
 			<h2><abbr title="Too Much Information">TMI</abbr></h2>
-			<p>
-				<ul>
-					<li>
-						<strong>Vrisel</strong>은 silver의 애너그램입니다. <br />
-						이름 지을 당시에 사용하던 노트북이 은색이라서...
-					</li>
-					<li>
-						잡다하게 다뤄본 언어들:
-						<ul>
-							<li>
-								mIRC에서 <abbr title="mIRC Scripting Language"><strong>mSL</strong></abbr>
-							</li>
-							<li>
-								Microsoft PowerPoint에서 <abbr title="Visual Basic for Applications"><strong>VBA</strong></abbr>
-							</li>
-							<li>
-								<abbr title="AutoHotKey"><strong>AHK</strong></abbr>, <strong>AutoIt</strong>
-							</li>
-						</ul>
-					</li>
-					<li>
-						프로그래밍 언어 외에도 각종 언어들을 좋아합니다. (듀오링고 <span id="duolingo" style="text-decoration: underline;"></span>일차)
-						<ul>
-							<li>
-								일상 대화가 가능한 수준:
-								<strong>English, 日本語</strong>
-							</li>
-							<li>
-								기초적인 수준:
-								<strong>Deutsch, 普通话</strong>
-							</li>
-							<li>
-								조금 배워본 것들:
-								<strong>Español, العربية</strong>
-							</li>
-							<li>
-								<a href="https://ko.wikipedia.org/wiki/%EC%9D%B8%EA%B3%B5%EC%96%B4" target="blank">인공어</a>:
-								<a href="https://ko.wikipedia.org/wiki/%EA%BF%B0%EB%83%90" target="blank"><strong>Quenya</strong></a>
-								<a href="http://twitter.com/lambemelindo" target="blank">(개인 트위터)</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</p>
+			<details>
+				<summary>
+					펼치기/접기
+				</summary>
+				<p>
+					<ul>
+						<li>
+							<strong>Vrisel</strong>은 silver의 애너그램입니다. <br />
+							이름 지을 당시에 사용하던 노트북이 은색이라서...
+						</li>
+						<li>
+							잡다하게 다뤄본 언어들:
+							<ul>
+								<li>
+									mIRC에서 <abbr title="mIRC Scripting Language"><strong>mSL</strong></abbr>
+								</li>
+								<li>
+									Microsoft PowerPoint에서 <abbr title="Visual Basic for Applications"><strong>VBA</strong></abbr>
+								</li>
+								<li>
+									<abbr title="AutoHotKey"><strong>AHK</strong></abbr>, <strong>AutoIt</strong>
+								</li>
+							</ul>
+						</li>
+						<li>
+							프로그래밍 언어 외에도 각종 언어들을 좋아합니다. (듀오링고 <span id="duolingo" style="text-decoration: underline;"></span>일차)
+							<ul>
+								<li>
+									일상 대화가 가능한 수준:
+									<strong>English, 日本語</strong>
+								</li>
+								<li>
+									기초적인 수준:
+									<strong>Deutsch, 普通话</strong>
+								</li>
+								<li>
+									조금 배워본 것들:
+									<strong>Español, العربية</strong>
+								</li>
+								<li>
+									<a href="https://ko.wikipedia.org/wiki/%EC%9D%B8%EA%B3%B5%EC%96%B4" target="blank">인공어</a>:
+									<a href="https://ko.wikipedia.org/wiki/%EA%BF%B0%EB%83%90" target="blank"><strong>Quenya</strong></a>
+									<a href="http://twitter.com/lambemelindo" target="blank">(개인 트위터)</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</p>
+			</details>
 		</article>
 	</section>
 	<!--<script type="text/javascript" src="script/jquery-3.5.1.min.js" />-->
