Add and apply some CSS classes
- [style.css] 글자색, 배경색, 글씨체를 클래스로 뽑아냄
- [sytle.css] 기타 순서 변경
- [index.html] 바뀐 스타일 적용
- issue #10

--- a/index.html
+++ b/index.html
@@ -11,37 +11,37 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	<header>
+	<header class="bg-violet">
 		<nav>
-			<h1 style="text-align: center;">Vrisel</h1>
+			<h1 class="header-font text-orange" style="text-align: center;">Vrisel</h1>
 			<ul>
-				<li><a href="#home">Home</a></li>
-				<li><a href="#about">About</a></li>
-				<li><a href="#skills">Skills</a></li>
-				<li><a href="#tmi" onclick="open_details('tmi');">TMI</a></li>
+				<li><a href="#home" class="header-font green-to-red">Home</a></li>
+				<li><a href="#about" class="header-font green-to-red">About</a></li>
+				<li><a href="#skills" class="header-font green-to-red">Skills</a></li>
+				<li><a href="#tmi" class="header-font green-to-red" onclick="open_details('tmi');">TMI</a></li>
 			</ul>
 		</nav>
-		<footer>
+		<footer class="text-yellow">
 			<hr />
 			Powered by GitHub
 		</footer>
 	</header>
-	<section>
+	<section class="body-font">
 		<article id="home">
-			<h2>Hello, World!</h2>
+			<h2 class="text-violet">Hello, World!</h2>
 			<p>
 				백&프론트 풀스택 프로그래머를 꿈꾸는 Vrisel의 페이지입니다. <br />
 				... 아직 페이지 작성 중입니다. 헤헤.
 			</p>
 		</article>
 		<article id="about">
-			<h2>About</h2>
+			<h2 class="text-violet">About</h2>
 			<p>
 				더 나은 세상을 꿈꿉니다.
 			</p>
 		</article>
 		<article id="skills">
-			<h2>Skills</h2>
+			<h2 class="text-violet">Skills</h2>
 			<p>
 				<ul>
 					<li>
@@ -57,7 +57,7 @@
 			</p>
 		</article>
 		<article id="tmi">
-			<h2><abbr title="Too Much Information">TMI</abbr></h2>
+			<h2 class="text-violet"><abbr title="Too Much Information">TMI</abbr></h2>
 			<details>
 				<summary>
 					펼치기/접기
