--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<li><a href="#home" class="header-font green-to-red">Home</a></li>
 				<li><a href="#about" class="header-font green-to-red">About</a></li>
 				<li><a href="#skills" class="header-font green-to-red">Skills</a></li>
+				<li><a href="#contacts" class="header-font green-to-red">Contacts</a></li>
 				<li><a href="#tmi" class="header-font green-to-red" onclick="open_details('tmi');">TMI</a></li>
 			</ul>
 		</nav>
@@ -56,6 +57,22 @@
 				</ul>
 			</p>
 		</article>
+		<article id="contacts">
+			<h2 class="text-violet">Contacts</h2>
+			<address>
+				<ul>
+					<li>
+						E-mail: <a href="mailto:vrisel.p@gmail.com">vrisel.p@gmail.com</a>
+					</li>
+					<li>
+						GitHub: <a href="https://github.com/vrisel" target="blank">Vrisel</a>
+					</li>
+					<li>
+						
+					</li>
+				</ul>
+			</address>
+		</article>
 		<article id="tmi">
 			<h2 class="text-violet"><abbr title="Too Much Information">TMI</abbr></h2>
 			<details>
@@ -69,7 +86,7 @@
 							이름 지을 당시에 사용하던 노트북이 은색이라서...
 						</li>
 						<li>
-							잡다하게 다뤄본 언어들:
+							가볍게 다뤄본 프로그래밍/스크립팅 언어들:
 							<ul>
 								<li>
 									mIRC에서 <abbr title="mIRC Scripting Language"><strong>mSL</strong></abbr>
@@ -87,20 +104,19 @@
 							<ul>
 								<li>
 									일상 대화가 가능한 수준:
-									<strong>English, 日本語</strong>
+									<strong><dfn title="영어">English</dfn>, <dfn title="일본어">日本語</dfn></strong>
 								</li>
 								<li>
 									기초적인 수준:
-									<strong>Deutsch, 普通话</strong>
+									<strong><dfn title="독일어">Deutsch</dfn>, <dfn title="중국 표준어">普通话</dfn></strong>
 								</li>
 								<li>
 									조금 배워본 것들:
-									<strong>Español, العربية</strong>
+									<strong><dfn title="스페인어">Español</dfn>, <dfn title="아랍어">العربية</dfn></strong>
 								</li>
 								<li>
-									<a href="https://ko.wikipedia.org/wiki/%EC%9D%B8%EA%B3%B5%EC%96%B4" target="blank">인공어</a>:
-									<a href="https://ko.wikipedia.org/wiki/%EA%BF%B0%EB%83%90" target="blank"><strong>Quenya</strong></a>
-									<a href="http://twitter.com/lambemelindo" target="blank">(개인 트위터)</a>
+									<a href="https://ko.wikipedia.org/wiki/%EC%9D%B8%EA%B3%B5%EC%96%B4" target="blank" title="">인공어</a>:
+									<strong><dfn title="퀘냐: 「반지의 제왕」으로 유명한 JRR톨킨의 작품에 등장하는 요정어 중 하나"><a href="https://ko.wikipedia.org/wiki/%EA%BF%B0%EB%83%90" target="blank">Quenya</a></dfn></strong>
 								</li>
 							</ul>
 						</li>
