Add content: "Projects" and modify minor
- Project 추가
- Contatct의 불필요한 <li> 제거
- issue #9

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<li><a href="#home" class="header-font green-to-red">Home</a></li>
 				<li><a href="#about" class="header-font green-to-red">About</a></li>
 				<li><a href="#skills" class="header-font green-to-red">Skills</a></li>
+				<li><a href="#projects" class="header-font green-to-red">Projects</a></li>
 				<li><a href="#contacts" class="header-font green-to-red">Contacts</a></li>
 				<li><a href="#tmi" class="header-font green-to-red" onclick="open_details('tmi');">TMI</a></li>
 			</ul>
@@ -57,6 +58,17 @@
 				</ul>
 			</p>
 		</article>
+		<article id="projects">
+			<h2 class="text-violet">Projects</h2>
+			<p>
+				<ul>
+					<li>
+						<a href="https://github.com/Vrisel/LyricsToSlide">LyricsToSlide</a>:
+						가사를 슬라이드를 쉽게 만들 수 있는 매크로 (Microsoft PowerPoint, 구역 기능이 있는 버전 이상에서 작동)
+					</li>
+				</ul>
+			</p>
+		</article>
 		<article id="contacts">
 			<h2 class="text-violet">Contacts</h2>
 			<address>
@@ -66,9 +78,6 @@
 					</li>
 					<li>
 						GitHub: <a href="https://github.com/vrisel" target="blank">Vrisel</a>
-					</li>
-					<li>
-						
 					</li>
 				</ul>
 			</address>
