--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<ul>
 					<li>
 						<a href="https://github.com/Vrisel/LyricsToSlide">LyricsToSlide</a>:
-						가사를 슬라이드를 쉽게 만들 수 있는 매크로 (Microsoft PowerPoint, 구역 기능이 있는 버전 이상에서 작동)
+						가사 슬라이드를 쉽게 만들 수 있는 매크로 (Microsoft PowerPoint, 구역 기능이 있는 버전 이상에서 작동)
 					</li>
 				</ul>
 			</p>
