Modify minor layouts
- nav 폭 110으로 증가
- footer font class 추가
- issue #10

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<li><a href="#tmi" class="header-font green-to-red" onclick="open_details('tmi');">TMI</a></li>
 			</ul>
 		</nav>
-		<footer class="text-yellow">
+		<footer class="body-font text-yellow">
 			<hr />
 			Powered by GitHub
 		</footer>
