--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 			<h1 class="header-font text-orange" style="text-align: center;">Vrisel</h1>
 			<ul>
 				<li><a href="#home" class="header-font green-to-red">Home</a></li>
-				<li><a href="#about" class="header-font green-to-red">About</a></li>
 				<li><a href="#skills" class="header-font green-to-red">Skills</a></li>
 				<li><a href="#projects" class="header-font green-to-red">Projects</a></li>
 				<li><a href="#contacts" class="header-font green-to-red">Contacts</a></li>
@@ -32,42 +31,44 @@
 		<article id="home">
 			<h2 class="text-violet">Hello, World!</h2>
 			<p>
-				백&프론트 풀스택 프로그래머를 꿈꾸는 Vrisel의 페이지입니다. <br />
-				... 아직 페이지 작성 중입니다. 헤헤.
-			</p>
-		</article>
-		<article id="about">
-			<h2 class="text-violet">About</h2>
-			<p>
-				더 나은 세상을 꿈꿉니다.
+				백&프론트 풀스택 프로그래머를 지망하는 <strong>Vrisel</strong>입니다.
+				<ul>
+					<li>
+						프로그래머의 <strong>사회적 역할</strong>에 대해 고민합니다.
+					</li>
+					<li>
+						새로이 배우는 것을 좋아합니다. <br />
+						<strong>배워서 남 주는 사람</strong>이 되고 싶습니다.
+					</li>
+					<li>
+						모든 사람이 사람답게 살 수 있는 세상을 꿈꿉니다. <br />
+						<span class="hashtag">#우리는_여기_있다 #LoveWins #BlackLivesMatter</span>
+					</li>
+				</ul>
 			</p>
 		</article>
 		<article id="skills">
 			<h2 class="text-violet">Skills</h2>
-			<p>
-				<ul>
-					<li>
-						<strong>HTML, CSS</strong> 문법을 이해합니다.
-					</li>
-					<li>
-						<strong>Python, C#, SQL, JavaScript, Java</strong> 등을 배우고 있습니다.
-					</li>
-					<li>
-						<strong><abbr title="Model, View, Controller">MVC</abbr></strong> 구조를 배우고 있습니다.
-					</li>
-				</ul>
-			</p>
+			<ul>
+				<li>
+					<strong>HTML, CSS</strong> 문법을 이해합니다.
+				</li>
+				<li>
+					<strong>Python, C#, SQL, JavaScript, Java</strong> 등을 배우고 있습니다.
+				</li>
+				<li>
+					<strong><abbr title="Model, View, Controller">MVC</abbr></strong> 구조를 배우고 있습니다.
+				</li>
+			</ul>
 		</article>
 		<article id="projects">
 			<h2 class="text-violet">Projects</h2>
-			<p>
-				<ul>
-					<li>
-						<a href="https://github.com/Vrisel/LyricsToSlide">LyricsToSlide</a>:
-						가사 슬라이드를 쉽게 만들 수 있는 매크로 (Microsoft PowerPoint, 구역 기능이 있는 버전 이상에서 작동)
-					</li>
-				</ul>
-			</p>
+			<ul>
+				<li>
+					<a href="https://github.com/Vrisel/LyricsToSlide">LyricsToSlide</a>:
+					가사 슬라이드를 쉽게 만들 수 있는 매크로 (Microsoft PowerPoint, 구역 기능이 있는 버전 이상에서 작동)
+				</li>
+			</ul>
 		</article>
 		<article id="contacts">
 			<h2 class="text-violet">Contacts</h2>
@@ -88,49 +89,53 @@
 				<summary>
 					펼치기/접기
 				</summary>
-				<p>
-					<ul>
-						<li>
-							<strong>Vrisel</strong>은 silver의 애너그램입니다. <br />
-							이름 지을 당시에 사용하던 노트북이 은색이라서...
-						</li>
-						<li>
-							가볍게 다뤄본 프로그래밍/스크립팅 언어들:
-							<ul>
-								<li>
-									mIRC에서 <abbr title="mIRC Scripting Language"><strong>mSL</strong></abbr>
-								</li>
-								<li>
-									Microsoft PowerPoint에서 <abbr title="Visual Basic for Applications"><strong>VBA</strong></abbr>
-								</li>
-								<li>
-									<abbr title="AutoHotKey"><strong>AHK</strong></abbr>, <strong>AutoIt</strong>
-								</li>
-							</ul>
-						</li>
-						<li>
-							프로그래밍 언어 외에도 각종 언어들을 좋아합니다. (듀오링고 <span id="duolingo" style="text-decoration: underline;"></span>일차)
-							<ul>
-								<li>
-									일상 대화가 가능한 수준:
-									<strong><dfn title="영어">English</dfn>, <dfn title="일본어">日本語</dfn></strong>
-								</li>
-								<li>
-									기초적인 수준:
-									<strong><dfn title="독일어">Deutsch</dfn>, <dfn title="중국 표준어">普通话</dfn></strong>
-								</li>
-								<li>
-									조금 배워본 것들:
-									<strong><dfn title="스페인어">Español</dfn>, <dfn title="아랍어">العربية</dfn></strong>
-								</li>
-								<li>
-									<a href="https://ko.wikipedia.org/wiki/%EC%9D%B8%EA%B3%B5%EC%96%B4" target="blank" title="">인공어</a>:
-									<strong><dfn title="퀘냐: 「반지의 제왕」으로 유명한 JRR톨킨의 작품에 등장하는 요정어 중 하나"><a href="https://ko.wikipedia.org/wiki/%EA%BF%B0%EB%83%90" target="blank">Quenya</a></dfn></strong>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</p>
+				<ul>
+					<li>
+						<strong>Vrisel</strong>은 silver의 애너그램입니다. <br />
+						이름 지을 당시에 사용하던 노트북이 은색이라서...
+					</li>
+					<li>
+						가볍게 다뤄본 프로그래밍/스크립팅 언어들:
+						<ul>
+							<li>
+								mIRC에서 <abbr title="mIRC Scripting Language"><strong>mSL</strong></abbr>
+							</li>
+							<li>
+								Microsoft PowerPoint에서 <abbr title="Visual Basic for Applications"><strong>VBA</strong></abbr>
+							</li>
+							<li>
+								<abbr title="AutoHotKey"><strong>AHK</strong></abbr>, <strong>AutoIt</strong>
+							</li>
+						</ul>
+					</li>
+					<li>
+						프로그래밍 언어 외에도 각종 언어들을 좋아합니다. (듀오링고 <span id="duolingo" style="text-decoration: underline;"></span>일차)
+						<ul>
+							<li>
+								일상 대화가 가능한 수준:
+								<strong><dfn title="영어">English</dfn>, <dfn title="일본어">日本語</dfn></strong>
+							</li>
+							<li>
+								기초적인 수준:
+								<strong><dfn title="독일어">Deutsch</dfn>, <dfn title="중국 표준어">普通话</dfn></strong>
+							</li>
+							<li>
+								조금 배워본 것들:
+								<strong><dfn title="스페인어">Español</dfn>, <dfn title="아랍어">العربية</dfn></strong>
+							</li>
+							<li>
+								<a href="https://ko.wikipedia.org/wiki/%EC%9D%B8%EA%B3%B5%EC%96%B4" target="blank" title="">인공어</a>:
+								<strong><dfn title="퀘냐: 「반지의 제왕」으로 유명한 JRR톨킨의 작품에 등장하는 요정어 중 하나"><a href="https://ko.wikipedia.org/wiki/%EA%BF%B0%EB%83%90" target="blank">Quenya</a></dfn></strong>
+							</li>
+						</ul>
+					</li>
+					<li>
+						세벌식(3-2015) 자판을 사용합니다.
+					</li>
+					<li>
+						왼손잡이입니다. 식사는 오른손으로 합니다.
+					</li>
+				</ul>
 			</details>
 		</article>
 	</section>
