--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 						<strong>배워서 남 주는 사람</strong>이 되고 싶습니다.
 					</li>
 					<li>
-						모든 사람이 사람답게 살 수 있는 세상을 꿈꿉니다. <br />
-						<span class="hashtag">#우리는_여기_있다 #LoveWins #BlackLivesMatter</span>
+						모든 사람이 사람답게 살 수 있는 세상을 꿈꿉니다.
 					</li>
 				</ul>
 			</p>
