--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
 				백&프론트 풀스택 프로그래머를 지망하는 <strong>Vrisel</strong>입니다.
 				<ul>
 					<li>
+						<dfn title="새 사도신경">"나는 전능하신 하나님, 천지의 창조주를 믿습니다"</dfn>
+					</li>
+					<li>
+						모든 사람이 사람답게 살 수 있는 세상을 꿈꿉니다.
+					</li>
+					<li>
 						프로그래머의 <strong>사회적 역할</strong>에 대해 고민합니다.
 					</li>
 					<li>
 						새로이 배우는 것을 좋아합니다. <br />
 						<strong>배워서 남 주는 사람</strong>이 되고 싶습니다.
-					</li>
-					<li>
-						모든 사람이 사람답게 살 수 있는 세상을 꿈꿉니다.
 					</li>
 				</ul>
 			</p>
@@ -138,7 +141,6 @@
 			</details>
 		</article>
 	</section>
-	<!--<script type="text/javascript" src="script/jquery-3.5.1.min.js" />-->
 	<script>
 		var today = new Date();
 		var startDay = new Date(2020, 8-1, 14);
