--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				백&프론트 풀스택 프로그래머를 지망하는 <strong>Vrisel</strong>입니다.
 				<ul>
 					<li>
-						<dfn title="새 사도신경">"나는 전능하신 하나님, 천지의 창조주를 믿습니다"</dfn>
+						<dfn title="새 사도신경">"나는 전능하신 아버지 하나님, 천지의 창조주를 믿습니다"</dfn>
 					</li>
 					<li>
 						모든 사람이 사람답게 살 수 있는 세상을 꿈꿉니다.
